--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,6 +15,7 @@ junit-jupiter-api = {module = "org.junit.jupiter:junit-jupiter-api", version.ref
 junit-jupiter-params = {module = "org.junit.jupiter:junit-jupiter-params", version.ref = "junit"}
 assertk = {module = "com.willowtreeapps.assertk:assertk-jvm", version.ref = "assertk"}
 junit-jupiter-engine = {module = "org.junit.jupiter:junit-jupiter-engine", version.ref = "junit"}
+junit-vintage-engine = {module = "org.junit.vintage:junit-vintage-engine", version.ref = "junit"}
 
 [plugins]
 kotlin-jvm = {id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin"}
