--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,8 @@
 [versions]
 komplex = "1.0.0"
 antlr4 = "4.9.3"
-junit = "5.8.2"
+junit = "5.10.2"
+junit-platform-launcher = "1.10.2"
 assertk = "0.25"
 compose = "1.6.1"
 spotless = "6.22.0"
@@ -16,6 +17,7 @@ junit-jupiter-params = {module = "org.junit.jupiter:junit-jupiter-params", versi
 assertk = {module = "com.willowtreeapps.assertk:assertk-jvm", version.ref = "assertk"}
 junit-jupiter-engine = {module = "org.junit.jupiter:junit-jupiter-engine", version.ref = "junit"}
 junit-vintage-engine = {module = "org.junit.vintage:junit-vintage-engine", version.ref = "junit"}
+junit-platform-launcher = {module = "org.junit.platform:junit-platform-launcher", version.ref = "junit-platform-launcher"}
 
 [plugins]
 kotlin-jvm = {id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin"}
