--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,7 +3,7 @@ komplex = "1.0.0"
 antlr4 = "4.9.3"
 junit = "5.10.2"
 junit-platform-launcher = "1.10.2"
-assertk = "0.25"
+kotest = "5.8.1"
 compose = "1.6.1"
 spotless = "6.22.0"
 ktlint = "0.48.0"
@@ -14,7 +14,9 @@ antlr4 = {module = "org.antlr:antlr4", version.ref = "antlr4"}
 antlr4-runtime = {module = "org.antlr:antlr4-runtime", version.ref = "antlr4"}
 junit-jupiter-api = {module = "org.junit.jupiter:junit-jupiter-api", version.ref = "junit"}
 junit-jupiter-params = {module = "org.junit.jupiter:junit-jupiter-params", version.ref = "junit"}
-assertk = {module = "com.willowtreeapps.assertk:assertk-jvm", version.ref = "assertk"}
+kotest-runner-junit5 = {module = "io.kotest:kotest-runner-junit5", version.ref = "kotest"}
+kotest-assertions-core = {module = "io.kotest:kotest-assertions-core", version.ref = "kotest"}
+kotest-property = {module = "io.kotest:kotest-property", version.ref = "kotest"}
 junit-jupiter-engine = {module = "org.junit.jupiter:junit-jupiter-engine", version.ref = "junit"}
 junit-vintage-engine = {module = "org.junit.vintage:junit-vintage-engine", version.ref = "junit"}
 junit-platform-launcher = {module = "org.junit.platform:junit-platform-launcher", version.ref = "junit-platform-launcher"}
