Switch to kotest for runner and test structure

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,12 +12,10 @@ kotlin = "1.9.22" # "2.0.0-Beta4"
 [libraries]
 antlr4 = {module = "org.antlr:antlr4", version.ref = "antlr4"}
 antlr4-runtime = {module = "org.antlr:antlr4-runtime", version.ref = "antlr4"}
-junit-jupiter-api = {module = "org.junit.jupiter:junit-jupiter-api", version.ref = "junit"}
-junit-jupiter-params = {module = "org.junit.jupiter:junit-jupiter-params", version.ref = "junit"}
 kotest-runner-junit5 = {module = "io.kotest:kotest-runner-junit5", version.ref = "kotest"}
 kotest-assertions-core = {module = "io.kotest:kotest-assertions-core", version.ref = "kotest"}
+kotest-framework-datatest = {module = "io.kotest:kotest-framework-datatest", version.ref = "kotest"}
 kotest-property = {module = "io.kotest:kotest-property", version.ref = "kotest"}
-junit-jupiter-engine = {module = "org.junit.jupiter:junit-jupiter-engine", version.ref = "junit"}
 junit-vintage-engine = {module = "org.junit.vintage:junit-vintage-engine", version.ref = "junit"}
 junit-platform-launcher = {module = "org.junit.platform:junit-platform-launcher", version.ref = "junit-platform-launcher"}
 
