--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,4 @@
 org.gradle.warning.mode=all
 kotlin.code.style=official
 org.jetbrains.compose.experimental.jscanvas.enabled=true
+kotlin.daemon.jvmargs=-Xmx1500m -Xms500m
