--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,6 +9,7 @@ kotlin = "2.0.0"
 antlr-kotlin = "1.0.0-RC4"
 icu4j = "75.1"
 buildkonfig = "0.15.2"
+kermit = "2.0.6"
 sentry = "7.19.0"
 sentry-gradle = "4.14.1"
 multiplatform-settings = "1.2.0"
@@ -16,6 +17,7 @@ multiplatform-settings = "1.2.0"
 [libraries]
 antlr-kotlin-runtime = {module = "com.strumenta:antlr-kotlin-runtime", version.ref = "antlr-kotlin"}
 icu4j = {module = "com.ibm.icu:icu4j", version.ref = "icu4j"}
+kermit = {module = "co.touchlab:kermit", version.ref = "kermit"}
 sentry = {module = "io.sentry:sentry", version.ref = "sentry"}
 multiplatform-settings = { module = "com.russhwolf:multiplatform-settings", version.ref = "multiplatform-settings" }
 multiplatform-settings-test = { module = "com.russhwolf:multiplatform-settings-test", version.ref = "multiplatform-settings" }
