Recording another two unusable bigint libraries
- kt-math doesn't work because its `divideAndRemainder` throws `ClassCastException` always.
- kmath-core doesn't work because its `BigInt` is simply missing too many basic functions which are too hard to implement as a workaround, hardest being things like `bitLength()`.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,6 +14,8 @@ sentry = "7.19.0"
 sentry-gradle = "4.14.1"
 multiplatform-settings = "1.2.0"
 k-big-numbers = "0.1.0"
+kmath = "0.4.2"
+kt-math = "0.10.0"
 
 [libraries]
 antlr-kotlin-runtime = {module = "com.strumenta:antlr-kotlin-runtime", version.ref = "antlr-kotlin"}
@@ -30,6 +32,8 @@ kotest-property = {module = "io.kotest:kotest-property", version.ref = "kotest"}
 junit-vintage-engine = {module = "org.junit.vintage:junit-vintage-engine", version.ref = "junit"}
 junit-platform-launcher = {module = "org.junit.platform:junit-platform-launcher", version.ref = "junit-platform-launcher"}
 k-big-numbers = {module = "io.k-libs:big-numbers", version.ref = "k-big-numbers"}
+kmath-core = {module = "space.kscience:kmath-core", version.ref = "kmath"}
+kt-math = {module = "io.github.gciatto:kt-math", version.ref = "kt-math"}
 
 [plugins]
 kotlin-multiplatform = {id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin"}
